# transformer-from-scratch

./: .gitignore  Justfile  README.md  pyproject.toml  pyrightconfig.json
experiments/: classify.py  generate.py
former/: __init__.py  modules.py  transformers.py
former/util/: __init__.py  util.py
tests/: compression.py  test_modules.py  test_util.py
typings/: transformers.pyi
typings/torch/: __init__.pyi
typings/torch/distributions/: __init__.pyi
typings/torch/nn/: __init__.pyi  functional.pyi
typings/torch/optim/: __init__.pyi
