[project]
name = "former"
version = "0.1"
description = "Educational implementation of self attention"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [
  { name = "Peter Bloem", email = "former@peterbloem.nl" },
  { name = "Hesam Haddad", email = "noreply@demoversion.dev" }
]
dependencies = [
  "tqdm",
  "numpy",
  "pyright>=1.1.405",
  "ruff>=0.12.12",
  "isort>=5.13.2",
  "transformers>=4.46.3",
  "fire>=0.7.1",
]

[project.optional-dependencies]
ml = [
  "torch",
  "torchtext",
  "tensorboard",
]
typecheck = ["types-torch"]

[project.urls]
Homepage = "http://www.peterbloem.nl/blog/transformers"
